<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/app_title">
		<CheckBoxPreference
			android:key="@string/preference_enabled"
			android:title="@string/preference_enabled_title"
			android:summary="@string/preference_enabled_summary"
			android:defaultValue="true"/>
		<ListPreference
			android:key="@string/preference_vibrate_parts"
			android:title="@string/preference_vibrate_parts_title"
			android:summary="@string/preference_vibrate_parts_summary"
			android:dialogTitle="@string/preference_vibrate_parts_dialog_title"
			android:entries="@array/preference_vibrate_parts_entries"
			android:entryValues="@array/preference_vibrate_parts_entry_values"
			android:defaultValue="0"/>
		<CheckBoxPreference
			android:key="@string/preference_vibrate_counts"
			android:title="@string/preference_vibrate_counts_title"
			android:summary="@string/preference_vibrate_counts_summary"
			android:defaultValue="false"/>
		<com.jakewharton.smsmorse.BetterSeekBarPreference
			android:key="@string/preference_dot_length"
			android:title="@string/preference_dot_length_title"
			android:summary="@string/preference_dot_length_summary"
			android:defaultValue="100"
			min="50"
			max="250"/>
		<EditTextPreference
			android:key="@string/preference_test"
			android:title="@string/preference_test_title"
			android:summary="@string/preference_test_summary"
			android:singleLine="true"/>
	</PreferenceCategory>
</PreferenceScreen>